Fixed text alignment in various areas.

--- a/admin/src/components/_ActionMenu.scss
+++ b/admin/src/components/_ActionMenu.scss
@@ -33,3 +33,8 @@
   line-height: inherit;
   padding: 0;
 }
+
+.action-menu__link:hover,
+.action-menu__button:hover {
+  text-decoration: underline;
+}
